--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
   <meta property="twitter:description" content="Share you creativity with world. we ptovide the service which can collab you creativity with world. share your pixellab plp file with us.">
   <meta property="twitter:image" content="images/designBazar.png">
 
+  <meta name="description" content="Share your creativity with the world. We provide a service that can collaborate on your creativity with the world. Share your Pixellab PLP file with us.">
+  <meta property="og:title" content="Design Bazar, A platform of sharing pixellab plp file">
+  <meta property="og:description" content="Share your creativity with the world. We provide a service that can collaborate on your creativity with the world. Share your Pixellab PLP file with us.">
+  <meta property="og:image" content="images/designBazar.png">
+  <meta property="twitter:title" content="Design Bazar, A platform of sharing pixellab plp file">
+  <meta property="twitter:description" content="Share your creativity with the world. We provide a service that can collaborate on your creativity with the world. Share your Pixellab PLP file with us.">
+  <meta property="twitter:image" content="images/designBazar.png">
+
   <!-- stylesheet link -->
   <link rel="stylesheet" href="css/styles.css">
 
